force-app/main/default/objects/Contact/fields/Comunicaci_n_precios__c.field-meta.xml
<CustomField>
    <fullName>Comunicaci_n_precios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacto al que enviar comunicaciones de precios</description>
    <label>Comunicación precios</label>
    <type>Checkbox</type>
</CustomField>