force-app/main/default/objects/Contact/fields/Encuesta_satisfacci_n__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_satisfacci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacto al que enviar la encuesta de satisfacción</description>
    <label>Encuesta satisfacción</label>
    <type>Checkbox</type>
</CustomField>