force-app/main/default/objects/Contact/fields/Former_Contact__c.field-meta.xml
<CustomField>
    <fullName>Former_Contact__c</fullName>
    <description>Contacts that are no longer with the Company</description>
    <label>Former Contact</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>