force-app/main/default/objects/Contact/fields/Insight_Profile__c.field-meta.xml
<CustomField>
    <fullName>Insight_Profile__c</fullName>
    <inlineHelpText>&quot;Yellow = Involve me&quot;.                                                                                                                                                              
&quot;Red = Be brief, Be bright, Be gone&quot;.
&quot;Blue = Give me detail&quot;.
&quot;Green = Show me you care&quot;.</inlineHelpText>
    <label>Insight Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>