force-app/main/default/objects/Contact/fields/Insight_Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Insight_Profile_Image__c</fullName>
    <formula>IF( ISPICKVAL(Insight_Profile__c , &apos;Green&apos;) ,
IMAGE( &apos;/resource/GreenCircle&apos;, &apos; Green&apos; , 30, 30),
IF(ISPICKVAL( Insight_Profile__c , &apos;Red&apos;) , IMAGE( &apos;/resource/RedColour&apos;, &apos; Red&apos; , 30, 30),
IF(ISPICKVAL( Insight_Profile__c , &apos;Blue&apos;) , IMAGE( &apos;/resource/BlueColor&apos;, &apos; Blue&apos; , 30, 30),
IF(ISPICKVAL( Insight_Profile__c , &apos;Yellow&apos;) , IMAGE( &apos;/resource/YellowColor&apos;, &apos; Yellow&apos; , 30, 30),  null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Profile</label>
    <type>Text</type>
</CustomField>