force-app/main/default/objects/Contact/recordTypes/Fifty_Contact_RT.recordType-meta.xml
<RecordType>
    <fullName>Fifty_Contact_RT</fullName>
    <active>true</active>
    <label>Fifty_Contact_RT</label>
</RecordType>